# agent_ide

./: CHECKLIST.md  LICENSE  README.md  config.yaml  demo.py  pyproject.toml
agent_ide/: __init__.py  agent.py  config.py  operations.py
agent_ide/cli/: __init__.py  main.py
agent_ide/core/: __init__.py  agent.py  execution.py  project.py
agent_ide/web/: __init__.py  server.py
docs/: usage.md
tests/: test_agent.py  test_basic.py
